--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,11 @@
     <string name="pause">PAUSE</string>
     <string name="start">START</string>
     <string name="reset">RESET</string>
-    <string name="todo_list">TO-DO LIST</string>
+    <string name="memo">MEMO</string>
     <string name="calculator">CALCULATOR</string>
     <string name="alarm_clock">ALARM CLOCK</string>
     <string name="baidu">BAIDU</string>
+    <string name="memo_title">MEMO</string>
+    <string name="memo_save">save</string>
+    <string name="memo_back">back</string>
 </resources>
