1.修改了主界面，新增实时时间的显示 2.修改了备忘录功能 3.完成闹钟界面的设计以及闹钟功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="alarm_clock">ALARM CLOCK</string>
     <string name="baidu">BAIDU</string>
     <string name="memo_title">MEMO</string>
-    <string name="memo_save">save</string>
-    <string name="memo_back">back</string>
+    <string name="memo_save">Save</string>
+    <string name="memo_back">Back</string>
+    <string name="set_clock">Set</string>
+    <string name="cancel_clock">Cancel</string>
+    <string name="alarm_clock_title">Alarm Clock</string>
+    <string name="alarm_clock_back">Back</string>
 </resources>
