--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,14 @@
     <string name="memo">MEMO</string>
     <string name="calculator">CALCULATOR</string>
     <string name="alarm_clock">ALARM CLOCK</string>
-    <string name="baidu">BAIDU</string>
+    <string name="website">WEBSITE</string>
     <string name="memo_title">MEMO</string>
-    <string name="memo_save">Save</string>
-    <string name="memo_back">Back</string>
-    <string name="set_clock">Set</string>
-    <string name="cancel_clock">Cancel</string>
-    <string name="alarm_clock_title">Alarm Clock</string>
-    <string name="alarm_clock_back">Back</string>
+    <string name="memo_save">SAVE</string>
+    <string name="memo_back">BACK</string>
+    <string name="set_clock">SET</string>
+    <string name="cancel_clock">CANCEL</string>
+    <string name="alarm_clock_title">ALARM CLOCK</string>
+    <string name="alarm_clock_back">BACK</string>
+    <string name="calculator_back">BACK</string>
+    <string name="alarm_clock_content">no alarm clock</string>
 </resources>
