1.新增快速浏览网页的功能 2.实现界面跳转和固定网址的跳转，自定义网址跳转待完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="memo">MEMO</string>
     <string name="calculator">CALCULATOR</string>
     <string name="alarm_clock">ALARM CLOCK</string>
-    <string name="website">WEBSITE</string>
+    <string name="website">QUICK BROWSING</string>
     <string name="memo_title">MEMO</string>
     <string name="memo_save">SAVE</string>
     <string name="memo_back">BACK</string>
