--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -8,7 +8,7 @@
     <string name="memo">备忘录</string>
     <string name="calculator">计算器</string>
     <string name="alarm_clock">闹钟</string>
-    <string name="website">百度</string>
+    <string name="website">快速浏览</string>
     <string name="memo_title">备忘录</string>
     <string name="memo_save">保存</string>
     <string name="memo_back">返回</string>
